--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nats-server"
+    "dev": "NODE_ENV=development ts-node-dev --respawn src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
 }
